--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.0
-requests==2.31.0
-APScheduler==3.10.4
 gunicorn==21.2.0
+requests==2.31.0
 feedparser==6.0.10
+APScheduler==3.10.4
+pytz==2023.3
