--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==3.0.0
+Werkzeug==3.0.1
 gunicorn==21.2.0
 requests==2.31.0
 feedparser==6.0.10
 APScheduler==3.10.4
-pytz==2023.3
+pytz==2024.1
+tzlocal==5.2
