--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==3.0.0
-Werkzeug==3.0.1
-gunicorn==21.2.0
+Flask==2.2.5
 requests==2.31.0
 feedparser==6.0.10
-APScheduler==3.10.4
-pytz==2024.1
-tzlocal==5.2
+apscheduler==3.10.1
+gunicorn==20.1.0
+urllib3==1.26.16
+backports.zoneinfo==0.2.1    # optional fallback if using Python <3.9
+pytz==2024.1                 # optional fallback
