--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,4 @@ feedparser==6.0.10
 apscheduler==3.10.1
 gunicorn==20.1.0
 urllib3==1.26.16
-backports.zoneinfo==0.2.1    # optional fallback if using Python <3.9
-pytz==2024.1                 # optional fallback
+pytz==2024.1
